Thu Sep  2 09:41:28 2004  Dale Wilson  <wilson_d@ociweb.com>

        * interop-tests/wchar/interop_wchar_i.cpp:
          Add a cast to keep the TRUE64 compiler from complaining
          that a wchar_t * cannot be used for a
          const CORBA::WChar_T * argument.

Thu Sep  2 08:52:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/ServerRequestInfo.cpp:
          Replaced ACE cast macros with normal C++ casts

Thu Sep  2 07:22:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Servant_Base.cpp:
          Replaced ACE cast macros with normal C++ casts

Wed Sep  1 12:55:41 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * docs/libraries.html:

          Removed duplicate DynamicInterface entry.

        * docs/orbsvcs.html:

          Fixed Sched service directory

Wed Sep  1 10:42:38 2004  Chad Elliott  <elliott_c@ociweb.com>

        * docs/cec_options.html:
        * orbsvcs/orbsvcs/CosEvent/CEC_ConsumerControl.h:
        * orbsvcs/orbsvcs/CosEvent/CEC_ConsumerControl.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_Default_Factory.h:
        * orbsvcs/orbsvcs/CosEvent/CEC_Default_Factory.i:
        * orbsvcs/orbsvcs/CosEvent/CEC_Default_Factory.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_Defaults.h:
        * orbsvcs/orbsvcs/CosEvent/CEC_EventChannel.h:
        * orbsvcs/orbsvcs/CosEvent/CEC_EventChannel.i:
        * orbsvcs/orbsvcs/CosEvent/CEC_EventChannel.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_ProxyPullConsumer.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_ProxyPullSupplier.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_ProxyPushConsumer.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_ProxyPushSupplier.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_Reactive_ConsumerControl.h:
        * orbsvcs/orbsvcs/CosEvent/CEC_Reactive_ConsumerControl.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_Reactive_Pulling_Strategy.h:
        * orbsvcs/orbsvcs/CosEvent/CEC_Reactive_Pulling_Strategy.cpp: